Add comprehensive README.md and automated build script
- Add detailed README.md with installation, usage, and architecture docs
- Create build.sh script for automated setup of Tavo.AI CLI
- Add requirements-dev.txt and requirements.txt for dependency management
- Update main.py with improved OpenGrep path detection
- Improve error handling for missing OpenGrep binary
- Add support for multiple OpenGrep installation locations

The build script automates:
- Python environment setup (pipenv/venv)
- System dependency installation for OpenGrep
- OpenGrep building from source
- CLI installation and verification
- Configuration setup

README includes:
- Feature overview and architecture
- Installation instructions (automated and manual)
- Usage examples for all CLI commands
- Rule management documentation
- Development setup and testing
- Contributing guidelines

--- a/Pipfile
+++ b/Pipfile
@@ -30,4 +30,4 @@ flake8 = "*"
 
 [packages]
 jsonschema = "==4.6.1"
-opengrep = {editable = true, path = "../opengrep/cli"}
+opengrep = {editable = true, path = "opengrep/cli"}
