--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,10 +1,8 @@
 # Development dependencies for Tavo.AI CLI
-# This file is generated from Pipfile for systems without pipenv
+# For users who prefer pip over pipenv
 
 # Core dependencies
 click>=8.0.0
-pathlib2>=2.3.0
-jsonschema==4.6.1
 
 # Development tools
 mypy==0.931
@@ -15,6 +13,12 @@ tox>=4.0.0
 requests-mock>=1.10.0
 pypi-parker>=0.1.0
 pytest-freezegun>=0.4.0
+pytest-mock>=3.0.0
+pytest-rerunfailures>=10.0.0
+pytest-split>=0.8.0
+flake8>=5.0.0
+
+# Type stubs (optional but recommended for development)
 types-colorama>=0.4.0
 types-freezegun>=0.1.0
 types-jinja2>=3.0.0
@@ -22,10 +26,11 @@ types-jsonschema==4.6.0
 types-python-dateutil>=2.8.0
 types-requests>=2.28.0
 types-setuptools>=65.0.0
+
+# Backports for older Python versions (if needed)
 importlib_metadata>=1.4.0
 importlib_resources>=1.4.0
 typing_extensions>=4.0.0
-flake8>=5.0.0
 
-# OpenGrep (built from source)
-# opengrep is handled as a git submodule and built separately
+# Note: OpenGrep is handled as a git submodule and built separately
+# All other runtime dependencies are built into Python 3.8+
