--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
 # Production dependencies for Tavo.AI CLI
-
 click>=8.0.0
-pathlib2>=2.3.0
-jsonschema==4.6.1
 
-# OpenGrep is handled as a git submodule and built separately
+# Note: OpenGrep is handled as a git submodule and built separately
+# All other dependencies (json, pathlib, subprocess, etc.) are built into Python 3.8+
