--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # Production dependencies for Tavo AI CLI
-click>=8.0.0
-tavo-python-sdk>=0.1.0
+click>=8.3.0
+tavo-sdk>=0.1.0
 
 # Note: OpenGrep is handled as a git submodule and built separately
 # All other dependencies (json, pathlib, subprocess, etc.) are built into Python 3.8+
